--- a/spring-07-SpringBoot-Demo/src/main/resources/application.properties
+++ b/spring-07-SpringBoot-Demo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#AppConfig
+username=Ozzy
+password= abc123
+url=www.cydeo.com
 
+#DBConfigData
+db.username=Ozzy
+db.password=abc123
+db.type=oracle,postgres,amazon
