--- a/spring-11-Data-TableCreation/src/main/resources/application.properties
+++ b/spring-11-Data-TableCreation/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.datasource.password=Hamzli@1998
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=create
