--- a/spring-14-Data-Queries/src/main/resources/application.properties
+++ b/spring-14-Data-Queries/src/main/resources/application.properties
@@ -4,14 +4,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Queries
 spring.datasource.username=postgres
 spring.datasource.password=Hamzli@1998
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.defer-datasource-initialization=true
-
-#spring.flyway.baseline-on-migrate=true
-
-#spring.flyway.enabled=false
