--- a/spring-13-Data-CinemaLab/src/main/resources/application.properties
+++ b/spring-13-Data-CinemaLab/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Hamzli@1998
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.sql.init.mode=always
 
