--- a/spring-20-REST-Security-Keycloak-LicenseApp/src/main/resources/application.properties
+++ b/spring-20-REST-Security-Keycloak-LicenseApp/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Hamzli@1998
 
 spring.jpa.show-sql=false
 
